external-dns-with-rbac.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.11.0
        args:
          - --source=service
          - --source=ingress
          - --domain-filter=k8s.test.devopsvelocity.com # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
          - --provider=aws
          - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
          - --registry=txt
          - --txt-owner-id=external-dns
          # - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 50Mi


    # # Uncommend below if using static credentials
    #        - name: AWS_SHARED_CREDENTIALS_FILE
    #          value: /.aws/credentials
    #      volumeMounts:
    #        - name: aws-credentials
    #          mountPath: /.aws
    #          readOnly: true
    #  volumes:
    #    - name: aws-credentials
    #      secret:
    #        secretName: external-dns
