ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: alb    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/scheme: internet-facing
    # cert-manager.io/issuer: "letsencrypt-staging"
    # cert-manager.io/issue-temporary-certificate: "true"
    # acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - server.k8s.test.devopsvelocity.com
  #   secretName: quickstart-example-tls
  rules:
  - host: server.k8s.test.devopsvelocity.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
